--- a/.vscode/osx/launch.json
+++ b/.vscode/osx/launch.json
@@ -10,14 +10,14 @@
 			"request": "launch",
 			"preLaunchTask": "Build",
 			"cwd": "${workspaceFolder}",
-			"program": "${workspaceFolder}/drxlax.elf",
+			"program": "${workspaceFolder}/purudemo.elf",
 			"MIMode": "gdb",
 			"miDebuggerPath": "/opt/toolchains/dc/sh-elf/bin/sh-elf-gdb",
 			"miDebuggerServerAddress": "localhost:2159", //common misconception: we connect to the gdb server offered by dc-tool-ip, NOT to the Dreamcast directly !
 			"debugServerPath": "/opt/toolchains/dc/bin/dc-tool-ip",
 			// "debugServerArgs": "-g -t 10.22.0.141 -x ${workspaceFolder}/drxlax.elf",
 			// "debugServerArgs": "-g -t 10.0.0.172 -x ${workspaceFolder}/drxlax.elf -m ${workspaceFolder}/cdrom/",
-			"debugServerArgs": "-g -t 192.168.2.6 -x ${workspaceFolder}/drxlax.elf -m ${workspaceFolder}/cdrom/",
+			"debugServerArgs": "-g -t 192.168.2.7 -x ${workspaceFolder}/purudemo.elf -m ${workspaceFolder}/cdrom/",
 			// "debugServerArgs": "-g -t 192.168.3.12 -x ${workspaceFolder}/drxlax.elf -m ${workspaceFolder}/cdrom/",
 			// "debugServerArgs": "-g -t 10.0.0.219 -x ${workspaceFolder}/drxlax.elf -m ${workspaceFolder}/cdrom/",x 
 			//"stopAtEntry": true,
