--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,69 +26,70 @@
 		}
 	},
 	"files.associations": {
-		"*.embeddedhtml": "html",
-		"rect_grid.h": "c",
-		"types.h": "c",
-		"titlescreen.h": "c",
-		"tex_loader.h": "c",
-		"sprite.h": "c",
-		"perfctr.h": "c",
-		"player.h": "c",
-		"statusbars.h": "c",
-		"compiledefs.h": "c",
-		"pvr.h": "c",
-		"startup_and_shutdown.h": "c",
-		"dreamcast.h": "c",
-		"perspective.h": "c",
-		"zoom.h": "c",
-		"math.h": "c",
-		"game.h": "c",
-		"controller.h": "c",
-		"abstract_ctrlr.h": "c",
-		"perf_monitor.h": "c",
-		"core.h": "c",
-		"mode.h": "c",
-		"singleplayer.h": "c",
-		"cstdlib": "c",
-		"plasma.h": "c",
-		"main.h": "c",
-		"regex": "c",
-		"aicontroller.h": "c",
-		"purupuru.h": "c",
-		"internet": "c",
-		"type_traits": "c",
-		"*.inc": "c",
-		"multiplayer.h": "c",
-		"replay.h": "c",
-		"linefont.h": "c",
-		"format": "c",
-		"curver.h": "c",
-		"array": "c",
-		"string": "c",
-		"buffer": "c",
-		"socket": "c",
-		"string_view": "c",
-		"ranges": "c",
-		"span": "c",
-		"endgame.h": "c",
-		"menu.h": "c",
-		"typeinfo": "c",
-		"randomcolortxt.h": "c",
-		"sfx.h": "c",
-		"pvr_mem.h": "c",
-		"shared.h": "c",
-		"gdb.h": "c",
-		"confirm.h": "c",
-		"scoreboard.h": "c",
-		"stacktrace": "c",
-		"impact.h": "c",
-		"vmu_fb.h": "c",
-		"bitmap.h": "c",
-		"save.h": "c",
-		"thread.h": "c",
-		"sem.h": "c",
-		"pthread.h": "c",
-		"matrix3d.h": "c",
-		"random": "c"
-	}
+    "*.embeddedhtml": "html",
+    "rect_grid.h": "c",
+    "types.h": "c",
+    "titlescreen.h": "c",
+    "tex_loader.h": "c",
+    "sprite.h": "c",
+    "perfctr.h": "c",
+    "player.h": "c",
+    "statusbars.h": "c",
+    "compiledefs.h": "c",
+    "pvr.h": "c",
+    "startup_and_shutdown.h": "c",
+    "dreamcast.h": "c",
+    "perspective.h": "c",
+    "zoom.h": "c",
+    "math.h": "c",
+    "game.h": "c",
+    "controller.h": "c",
+    "abstract_ctrlr.h": "c",
+    "perf_monitor.h": "c",
+    "core.h": "c",
+    "mode.h": "c",
+    "singleplayer.h": "c",
+    "cstdlib": "c",
+    "plasma.h": "c",
+    "main.h": "c",
+    "regex": "c",
+    "aicontroller.h": "c",
+    "purupuru.h": "c",
+    "internet": "c",
+    "type_traits": "c",
+    "*.inc": "c",
+    "multiplayer.h": "c",
+    "replay.h": "c",
+    "linefont.h": "c",
+    "format": "c",
+    "curver.h": "c",
+    "array": "c",
+    "string": "c",
+    "buffer": "c",
+    "socket": "c",
+    "string_view": "c",
+    "ranges": "c",
+    "span": "c",
+    "endgame.h": "c",
+    "menu.h": "c",
+    "typeinfo": "c",
+    "randomcolortxt.h": "c",
+    "sfx.h": "c",
+    "pvr_mem.h": "c",
+    "shared.h": "c",
+    "gdb.h": "c",
+    "confirm.h": "c",
+    "scoreboard.h": "c",
+    "stacktrace": "c",
+    "impact.h": "c",
+    "vmu_fb.h": "c",
+    "bitmap.h": "c",
+    "save.h": "c",
+    "thread.h": "c",
+    "sem.h": "c",
+    "pthread.h": "c",
+    "matrix3d.h": "c",
+    "random": "c",
+    "rumble.h": "c"
+  }
 }
