seems to work really well now

--- a/.vscode/linux/launch.json
+++ b/.vscode/linux/launch.json
@@ -8,13 +8,13 @@
 			"request": "launch",
 			"preLaunchTask": "Build",
 			"cwd": "${workspaceFolder}",
-			"program": "${workspaceFolder}/purudemo.elf",
+			"program": "${workspaceFolder}/bin/purupuru_demo.elf",
 			"MIMode": "gdb",
 			"miDebuggerPath": "/opt/toolchains/dc/sh-elf/bin/sh-elf-gdb",
 			"miDebuggerServerAddress": "localhost:2159", //common misconception: we connect to the gdb server offered by dc-tool-ip, NOT to the Dreamcast directly !
 			"debugServerPath": "/opt/toolchains/dc/bin/dc-tool-ip",
-			"debugServerArgs": "-g -t 10.0.0.251 -x ${workspaceFolder}/purudemo.elf -m ${workspaceFolder}/cdrom/",
-			// "debugServerArgs": "-g -t 10.0.0.172 -x ${workspaceFolder}/purudemo.elf -m ${workspaceFolder}/cdrom/",
+			"debugServerArgs": "-g -t 10.0.0.248 -x ${workspaceFolder}/bin/purupuru_demo.elf -m ${workspaceFolder}/cdrom/",
+			// "debugServerArgs": "-g -t 10.0.0.172 -x ${workspaceFolder}/bin/purupuru_demo.elf -m ${workspaceFolder}/cdrom/",
 			"stopAtEntry": false,
 			"externalConsole": false,
 			"avoidWindowsConsoleRedirection": false,
